--- a/pages/pricing.mdx
+++ b/pages/pricing.mdx
@@ -1,10 +1,10 @@
 import DocsLayout from '@/components/DocsLayout';
 
-export default (props) => <DocsLayout {...props} />
+export default (props) => <DocsLayout {...props} />;
 
 # Pricing
 
 Fast Feedback is still in alpha. It's free to sign up and leave feedback
-and $10/month for unlimited sites and feedback.
+and $3.50/month for unlimited sites and feedback.
 
-Reach out to support@fastfeedback.io if you have any questions.
+Reach out to contact@andysmith.is if you have any questions.
