--- a/pages/pricing.mdx
+++ b/pages/pricing.mdx
@@ -4,7 +4,7 @@ export default (props) => <DocsLayout {...props} />;
 
 # Pricing
 
-Fast Feedback is still in alpha. It's free to sign up and leave feedback
+Bare Comments is still in alpha. It's free to sign up and leave feedback
 and $3.50/month for unlimited sites and feedback.
 
 Reach out to contact@andysmith.is if you have any questions.
